metadataPackage_1593448409706/objects/Tag__c.object
<CustomObject>
    <description>predefined tag that are designed to be applied on certain objects for variety of business notations</description>
    <label>Tag</label>
    <nameField>
        <label>Tag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicable_To__c</fullName>
        <defaultValue>&quot;ALL&quot;</defaultValue>
        <description>API Name of the Objects that a given tag is applicable to. If ALL is selected then it would be applicable to All type of objects and if NO value is selected then it will be applicable to None.</description>
        <inlineHelpText>API Name of the Objects that a given tag is applicable to</inlineHelpText>
        <label>Applicable To</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>PersonAccount</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>allows organizing of tags by predefined category subsets</description>
        <inlineHelpText>allows organizing of tags by predefined category subsets</inlineHelpText>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Initiatives</fullName>
                </value>
                <value>
                    <fullName>Interest &amp; Hobbies</fullName>
                </value>
                <value>
                    <fullName>Events &amp; Seminars</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Admin description for internal reference</description>
        <inlineHelpText>Admin description for internal reference</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <description>Displayed to the user while applying Tag to a given Object, or when viewing tags that are applied already.</description>
        <inlineHelpText>Displayed to the user while applying Tag to a given Object, or when viewing tags that are applied already.</inlineHelpText>
        <label>Help Text</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tag_Color__c</fullName>
        <label>Tag Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>White</fullName>
                    <default>true</default>
                    <label>White</label>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Pink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Applicable_To__c</columns>
        <columns>Category__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>